Changed name of the color cyan to purple and added new options for work with height on utility tag.

--- a/src/organic/colors.less
+++ b/src/organic/colors.less
@@ -26,8 +26,8 @@
 	color: @color-yellow;
 }
 
-.@{prefix}-color-cyan {
-	color: @color-cyan;
+.@{prefix}-color-purple {
+	color: @color-purple;
 }
 
 .@{prefix}-color-bg-gray {
@@ -50,8 +50,8 @@
 	background-color: @color-bg-blue;
 }
 
-.@{prefix}-color-bg-cyan {
-	background-color: @color-bg-cyan;
+.@{prefix}-color-bg-purple {
+	background-color: @color-bg-purple;
 }
 
 .@{prefix}-color-sbg-gray:after {
@@ -74,8 +74,8 @@
 	border-top: 25px solid @color-bg-blue;
 }
 
-.@{prefix}-color-sbg-cyan:after {
-	border-top: 25px solid @color-bg-cyan;
+.@{prefix}-color-sbg-purple:after {
+	border-top: 25px solid @color-bg-purple;
 }
 
 .@{prefix}-color-sbg-gray:before {
@@ -98,8 +98,8 @@
 	border-bottom: 25px solid @color-bg-blue;
 }
 
-.@{prefix}-color-sbg-cyan:before {
-	border-bottom: 25px solid @color-bg-cyan;
+.@{prefix}-color-sbg-purple:before {
+	border-bottom: 25px solid @color-bg-purple;
 }
 
 .@{prefix}-color-alert-success {
