--- a/src/organic/organic.less
+++ b/src/organic/organic.less
@@ -41,7 +41,7 @@ Tags:
 @color-blue: #2868a0;
 @color-red: red;
 @color-yellow: #bd8200;
-@color-cyan: #8b5591;
+@color-purple: #8b5591;
 @color-gray: gray;
 @color-black: black;
 
@@ -54,8 +54,8 @@ Tags:
 @color-bgh-red: #ff1131;
 @color-bg-yellow: #ffeaa3;
 @color-bgh-yellow: #fbcb63;
-@color-bg-cyan: #b8b1d5;
-@color-bgh-cyan: #a1a1e3;
+@color-bg-purple: #b8b1d5;
+@color-bgh-purple: #a1a1e3;
 @color-bg-gray: #d4d4d4;
 
 @color-alert-sucess: #79d176;
@@ -91,10 +91,10 @@ Tags:
 @buttons-flat-yellow-hover: @color-bgh-yellow;
 @buttons-flat-yellow-hover-text: #a16e01;
 
-@buttons-flat-cyan-normal: @color-bg-cyan;
-@buttons-flat-cyan-normal-text: #433e82;
-@buttons-flat-cyan-hover: @color-bgh-cyan;
-@buttons-flat-cyan-hover-text: #433e82;
+@buttons-flat-purple-normal: @color-bg-purple;
+@buttons-flat-purple-normal-text: #433e82;
+@buttons-flat-purple-hover: @color-bgh-purple;
+@buttons-flat-purple-hover-text: #433e82;
 
 @buttons-flat-gray-normal: #d4d4d4;
 @buttons-flat-gray-normal-text: @color-gray;
