--- a/src/organic/utility.less
+++ b/src/organic/utility.less
@@ -43,6 +43,14 @@
 	padding:2px;
 }
 
+.@{prefix}-padding-3 {
+	padding:3px;
+}
+
+.@{prefix}-padding-4 {
+	padding:4px;
+}
+
 .@{prefix}-padding-5 {
 	padding:5px;
 }
@@ -109,6 +117,18 @@
 
 .@{prefix}-height-500 {
 	height:500px;
+}
+
+.@{prefix}-height-600 {
+	height:600px;
+}
+
+.@{prefix}-height-700 {
+	height:700px;
+}
+
+.@{prefix}-height-800 {
+	height:800px;
 }
 
 .@{prefix}-mheight-300 {
