--- a/src/organic/buttons.less
+++ b/src/organic/buttons.less
@@ -64,13 +64,13 @@
 	.genFlatButtonHover(@buttons-flat-green-hover, @buttons-flat-green-hover-text)
 }
 
-/* Cyan */
-.@{prefix}-buttons-flat-cyan {
-	.genFlatButtonNormal(@buttons-flat-cyan-normal, @buttons-flat-cyan-normal-text)
+/* Purple */
+.@{prefix}-buttons-flat-purple {
+	.genFlatButtonNormal(@buttons-flat-purple-normal, @buttons-flat-purple-normal-text)
 }
 
-.@{prefix}-buttons-flat-cyan:hover {
-	.genFlatButtonHover(@buttons-flat-cyan-hover, @buttons-flat-cyan-hover-text)
+.@{prefix}-buttons-flat-purple:hover {
+	.genFlatButtonHover(@buttons-flat-purple-hover, @buttons-flat-purple-hover-text)
 }
 
 /* Gray */
